--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -1,12 +1,103 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+<html lang="en">
+
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Pam's Admin</title>
+
+    {{ encore_entry_link_tags('admin') }}
+    {% block stylesheets %}{% endblock %}
+
+    <link rel="shortcut icon" href="{{ asset('assets/admin/images/favicon.png') }}"/>
+</head>
+
+<body>
+<div class="container-scroller">
+    <!-- partial:../../partials/_navbar.html -->
+    <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
+        <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
+            <a class="navbar-brand brand-logo" href="{{ path('admin_dashboard') }}"><img src="{{ asset('assets/admin/images/logo.svg') }}" alt="logo"/></a>
+            <a class="navbar-brand brand-logo-mini" href="{{ path('admin_dashboard') }}"><img src="{{ asset('assets/admin/images/logo-mini.svg') }}" alt="logo"/></a>
+        </div>
+        <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
+            <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
+                <span class="mdi mdi-menu"></span>
+            </button>
+            <ul class="navbar-nav navbar-nav-right">
+
+                <li class="nav-item nav-profile dropdown">
+                    <a class="nav-link" href="#" data-toggle="dropdown" id="profileDropdown">
+                        <img src="{{ asset('assets/admin/images/userface.png') }}" alt="profile"/>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
+                        <a class="dropdown-item" href="{{ path('app_logout') }}">
+                            <i class="mdi mdi-logout text-primary"></i>
+                            Logout
+                        </a>
+                    </div>
+                </li>
+            </ul>
+            <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
+                <span class="mdi mdi-menu"></span>
+            </button>
+        </div>
+    </nav>
+    <!-- partial -->
+    <div class="container-fluid page-body-wrapper">
+
+        <nav class="sidebar sidebar-offcanvas" id="sidebar">
+            <div class="sidebar-profile">
+                <div class="d-flex align-items-center justify-content-between">
+                    <div class="profile-desc">
+                        <p class="name mb-0">Admin Pam's</p>
+                    </div>
+                </div>
+            </div>
+            <ul class="nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('admin_dashboard') }}">
+                        <i class="mdi mdi-shield-half-full menu-icon"></i>
+                        <span class="menu-title">Dashboard</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('admin_user') }}">
+                        <i class="mdi mdi-account-group menu-icon"></i>
+                        <span class="menu-title">Users</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('admin_code') }}">
+                        <i class="mdi mdi-barcode menu-icon"></i>
+                        <span class="menu-title">Codes</span>
+                    </a>
+                </li>
+
+            </ul>
+        </nav>
+
+        <div class="main-panel">
+            <div class="content-wrapper">
+                {% block body %}{% endblock %}
+            </div>
+
+            <footer class="footer">
+                <div class="d-sm-flex justify-content-center justify-content-sm-between">
+                    <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Pam's</span>
+                </div>
+            </footer>
+
+        </div>
+
+    </div>
+
+</div>
+{{ encore_entry_script_tags('admin') }}
+
+{% block javascripts %}{% endblock %}
+
+</body>
+
 </html>
