--- a/templates/security/forgotten_password.html.twig
+++ b/templates/security/forgotten_password.html.twig
@@ -1,17 +1,27 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Forgotten Password!{% endblock %}
+{% extends 'security/base_security.html.twig' %}
 
 {% block body %}
-    <form method="post">
+<h4>Mot de passe oublié</h4>
+{% for label, messages in app.flashes %}
+    {% if label=='notice' %}
+        {% set label = 'success' %}
+    {% endif %}
+    {% for message in messages %}
+        <div class="alert alert-{{ label }}">
+            {{ message }}
+        </div>
+    {% endfor %}
+{% endfor %}
 
-        <h1 class="h3 mb-3 font-weight-normal">Forgotten Password</h1>
-        <label for="inputEmail" class="sr-only">Email</label>
-        <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
+<form class="pt-3" method="post">
+    <div class="form-group">
+        <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Email" name="email" required autofocus>
+    </div>
 
-        <button class="btn btn-lg btn-primary" type="submit">
-            Send mail !
+    <div class="mt-3">
+        <button class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" type="submit">
+            Envoyer le mail
         </button>
-
-    </form>
+    </div>
+</form>
 {% endblock %}
