--- a/templates/security/reset_password.html.twig
+++ b/templates/security/reset_password.html.twig
@@ -1,17 +1,29 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Reset Password !{% endblock %}
+{% extends 'security/base_security.html.twig' %}
 
 {% block body %}
-    <form method="post">
+    <h4>Reset Mot de passe</h4>
+    {% for label, messages in app.flashes %}
+        {% if label=='notice' %}
+            {% set label = 'success' %}
+        {% endif %}
+        {% for message in messages %}
+            <div class="alert alert-{{ label }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endfor %}
 
-        <h1 class="h3 mb-3 font-weight-normal">Reset Password</h1>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <input type="hidden" name="token" value="{token}">
+    <form class="pt-3" method="post">
+        <div class="form-group">
+            <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
 
-        <button class="btn btn-lg btn-primary" type="submit">
-            Change
-        </button>
+        </div>
+
+        <div class="mt-3">
+            <button class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" type="submit">
+                Envoyer le mail
+            </button>
+        </div>
+        <input type="hidden" name="token" value="{{ token }}">
     </form>
 {% endblock %}
