--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -74,7 +74,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('admin_code') }}">
+                    <a class="nav-link" href="{{ path('admin_pams_code_index') }}">
                         <i class="mdi mdi-barcode menu-icon"></i>
                         <span class="menu-title">Codes</span>
                     </a>
