--- a/templates/admin/user/index.html.twig
+++ b/templates/admin/user/index.html.twig
@@ -20,8 +20,8 @@
 
             <div class="row">
                 <div class="col-12">
-                    <div class="table-responsive">
-                        <table id="order-listing" class="table table-striped table-bordered dt-responsive nowrap">
+                    <div class="table-responsive-sm">
+                        <table id="order-listing" class="table table-striped table-borderless">
                             <thead>
                             <tr>
                                 <th>#</th>
@@ -51,7 +51,7 @@
                                                 <form method="post" action="{{ path('admin_user_delete', {id: user.id}) }}" style="display: inline-block" onsubmit="return confirm('Êtes vous vraiment sûr ?')">
                                                     <input type="hidden" name="_method" value="DELETE">
                                                     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
-                                                    <button class="btn btn-outline-danger">Supprime</button>
+                                                    <button class="btn btn-outline-danger">Supprimer</button>
                                                 </form>
                                             {% endif %}
                                         {% endif %}
