--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,6 @@
         <link rel="stylesheet" type="text/css" href="{{ asset('css/jquery-ui.min.css') }}"/>
         <link rel="stylesheet" type="text/css" href="{{ asset('css/font-awesome.min.css')}}" />
         <link rel="stylesheet" type="text/css" href="{{ asset('css/main.css') }}"/>
-        <link rel="stylesheet" type="text/css" href="{{ asset('js/main.js') }}"/>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
@@ -57,12 +56,12 @@
               </div>
           </div>
         {% endif %}
-        <script src="{{ asset('bundles/mypams/js/jquery-1.10.2.min.js') }}"></script>
-        <script src="{{ asset('bundles/mypams/js/jquery-ui.min.js') }}"></script>
-        <script src="{{ asset('bundles/mypams/js/bootstrap.min.js') }}"></script>
-        <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
-        <script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}"></script>
-        <script src="{{ asset('bundles/mypams/js/main.js') }}"></script>
+        <script src="{{ asset('js/jquery-1.10.2.min.js') }}"></script>
+        <script src="{{ asset('js/jquery-ui.min.js') }}"></script>
+        <script src="{{ asset('js/bootstrap.min.js') }}"></script>
+        <!--script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script-->
+        <!--script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}"></script-->
+        <script src="{{ asset('js/main.js') }}"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
