--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -10,7 +10,7 @@
                 <source src="{{ asset('images/bg.mp4') }}" type="video/mp4"> 
             </video>
     </div>
-    <div class="hidebox" id="bodyTimer">
+    <div id="bodyTimer" class="hidetimer">
         <div class="row">
             <div class="container">
                 <div class="row">
@@ -22,9 +22,9 @@
                             </div>
                         {% endfor %}
                     {% endfor %}
-
-                    {{ form(form) }}
-                     
+                     <div class="input-group-lg ">
+                        {{ form(form) }}
+                     </div>
                     </div>
                 </div>
             </div>
