--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,9 +38,9 @@
             </div>
         </nav>
         {% block flash %}{% endblock %}
-        {% block body %}
+        {% block indexbody %}
       
-                {% endblock %}
+        {% endblock %}
 
         {% if false == is_granted('ROLE_PAMS') %}
           <div class="container-fluid footer">
