--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}My Pam's – Saisissez votre code My Pams{% endblock %}
 
-{% block body %}
+{% block indexbody %}
 
     <div class="container-fluid homepage">
     <div id="videoContain">
