--- a/templates/default/init.html.twig
+++ b/templates/default/init.html.twig
@@ -1,7 +1,6 @@
-{% extends 'base.html.twig' %}
 
-{% block body %}
+<div class="container">
+<h1>Test</h1>
 
-    {{ form(form) }}
 
-{% endblock %}
+</div>
