--- a/templates/default/coffre.html.twig
+++ b/templates/default/coffre.html.twig
@@ -13,7 +13,7 @@
 <body>
 
 <div class="logo_pams hidden-xs">
-    <a href=""><img src="{{ asset('images/logo-pams.png') }}" class="img-responsive" width="250px"></a>
+    <a href=""><img src="{{ asset('images/logo-pams.png') }}" class="img-responsive" width="280px"></a>
 </div>
 <div class="logo_pams visible-xs">
     <a href=""><img src="{{ asset('images/logo-pams.png') }}" width="80" height="auto"></a>
@@ -44,7 +44,7 @@
             <source src="{{ asset('images/bg.mp4') }}" type="video/mp4">
         </video>
     </div>
-    <div id="bodyTimer" class="hidetimer">
+    <div id="bodyTimer" class="bodyTimer">
         <div class="row">
             <div class="container">
                 <div class="row">
