--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,8 +50,8 @@ html, body{
 
 .logo_pams{
   position: absolute;
-  top:0px;
-  left:0px;
+  top:15px;
+  left:15px;
   z-index: 1000;
   padding: 10px;
 }
@@ -104,15 +104,27 @@ html, body{
   border-radius: 180px;
 }
 
-.btn-go:hover,
+/*.btn-go:hover,
 .btn-go:focus{
   background: #3b271c;
   color:#ffffff;
-}
+}*/
 
 .home-message{
   color:#ffffff;
   font-size: 36px;
+}
+
+.flash-warning{
+  background-color: red;
+  color: white;
+  padding: 25px;
+  width: 250px;
+  margin: 0 auto;
+  border-radius: 25px;
+  font-size: 16px;
+  margin-bottom: 15px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
 .container-fluid.footer {
@@ -168,13 +180,15 @@ html, body{
     margin: 0 auto;
 }
 
-#bodyTimer{
-  opacity: 1;
-  transition: opacity 5s;
+.bodyTimer{
+  opacity: 0;
+  transform: scale(0.1);
 }
 
 .hidetimer{
-  opacity: 0 !important;
+  opacity: 1!important;
+  transform: scale(1)!important;
+  transition: all 5s;
  }
 
  /* Page Firstform */
@@ -223,7 +237,7 @@ html, body{
  .firstform-header{
    background-color: #2c2320;
    color: #FFF;
-   height: 100px;
+   height: 125px;
    vertical-align: middle;
    
  }
@@ -232,7 +246,7 @@ html, body{
    font-family: 'Blenda', sans-serif;
    color: #eeb638;
    margin-top: 0px;
-   padding-top: 25px;
+   padding-top: 44px;
  }
 
  .firstform-subheader{
