--- a/templates/default/coffre.html.twig
+++ b/templates/default/coffre.html.twig
@@ -51,9 +51,11 @@
                     <div class="col-md-12 text-center">
                         {% for label, messages in app.flashes %}
                             {% for message in messages %}
+                            <div id="errorContainer">
                                 <div class="flash-{{ label }}">
                                     {{ message }}
                                 </div>
+                            </div>
                             {% endfor %}
                         {% endfor %}
                         <div class="input-group-lg ">
