--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,16 +3,13 @@
   src:url("../fonts/Blenda.otf")
 }
 
-html, body{
+html{
   height: 100%;
-  background-color: #3b271c;
 }
-
-/*
-.container-fluid{
-  padding:0 15px;
-  width:100%;
-}*/
+body{
+  background-color: #ffffff00;
+  overflow: hidden;
+}
 
 ul{
   list-style-type: none;
@@ -358,7 +355,11 @@ ul{
 
 #createBody{
   background-color: pink;
-  overflow: hidden;
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 
 #createNav{
@@ -539,6 +540,15 @@ ul{
 #backgroundContainer ul li:first-of-type{
   float:left;
 }
+
+#backgroundContainer ul{
+  padding: 0px 20px 0px 40px;
+}
+
+#backgroundContainer ul li img{
+  display: block;
+}
+
 #colorPickerContainer{
   position: absolute;
   left: 208px;
@@ -569,6 +579,10 @@ ul{
   height: 200px;
   border-width: 2px;
   margin-bottom: 20px;
+}
+
+#imagePicker{
+  display: none;
 }
 
 /* skin.css Style*/
